--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout # check out source code to working directory
       - run: go build github.com/simonmittag/jabba
-      - run: go test github.com/simonmittag/jabba
+      - run: go test -v -cover github.com/simonmittag/jabba
       - run: go install github.com/simonmittag/jabba/cmd/jabba
 
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
