--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,12 @@ jobs:
             export CIRCLE_BRANCH=`git rev-parse --abbrev-ref HEAD`
             ./cc-test-reporter before-build
             go test -cover -coverprofile=c.out
-            gotestsum --junitfile /tmp/test-results/unit-tests.xml
             go tool cover -html=c.out -o coverage.html
             ./cc-test-reporter after-build --coverage-input-type gocov -p "github.com/simonmittag/jabba"
             mv coverage.html /tmp/artifacts
+      - run:
+          name: Test Summary for CircleCI
+          command: gotestsum --junitfile /tmp/test-results/unit-tests.xml
       - store_artifacts:
           path: /tmp/artifacts
 
