--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,16 @@ jobs:
       - checkout # check out source code to working directory
       - run: go build github.com/simonmittag/jabba
       - run: go install github.com/simonmittag/jabba/cmd/jabba
+      - run: go test -v
+
+  metrics:
+    docker:
+      - image: circleci/golang:1.14 #
+    environment:
+      TEST_RESULTS: /tmp/test-results
+      LOGLEVEL: TRACE
+      CC_TEST_REPORTER_ID: a45fccea925702bc9483bdead24976073cf3e3807b22ce566d2858a700e5472c
+    steps:
       - run:
           name: "Create a temp directory for artifacts"
           command: |
