--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,12 @@
 version: 2.1
 
+workflows:
+  version: 2.1
+  build_and_metrics:
+    jobs:
+      - build
+      - metrics
+
 jobs:
   build:
     docker:
