--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,20 +77,25 @@ jobs:
       LOGLEVEL: TRACE
     steps:
       - checkout # check out source code to working directory
-      - run: go build github.com/simonmittag/jabba
-      - run: go install github.com/simonmittag/jabba/cmd/jabba
-      - run:
-          name: start jabba
-          command: jabba
-          background: true
+      - run: go get github.com/simonmittag/pwt
+      - run: go install github.com/simonmittag/pwt/cmd/pwt
       - run: go get github.com/simonmittag/mse6
       - run: go install github.com/simonmittag/mse6/cmd/mse6
       - run:
           name: Start upstream server one
           command: mse6 -p 60083
           background: true
+      - run: pwt localhost:60083
       - run:
           name: Start upstream server two
           command: mse6 -p 60084
           background: true
+      - run: pwt localhost:60084
+      - run: go build github.com/simonmittag/jabba
+      - run: go install github.com/simonmittag/jabba/cmd/jabba
+      - run:
+          name: start jabba
+          command: jabba
+          background: true
+      - run: pwt localhost:8080
       - run: curl http://localhost:8080/mse6/slowbody
