--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,19 @@ version: 2.1
 
 workflows:
   version: 2.1
-  buildunittest:
+  unittest:
     jobs:
-      - buildunittest
+      - unit
       - metrics
   integrationtest:
     jobs:
-      - integrationtest
+      - integration
   performancetest:
     jobs:
-      - performancetest
+      - performance
 
 jobs:
-  buildunittest:
+  unit:
     docker:
       - image: circleci/golang:1.14 #
     environment:
@@ -74,7 +74,7 @@ jobs:
       - store_test_results:
           path: /tmp/test-results
 
-  integrationtest:
+  integration:
     docker:
       - image: circleci/golang:1.14
     environment:
@@ -105,7 +105,7 @@ jobs:
       - run: pwt localhost:8080
       - run: go test -v github.com/simonmittag/jabba/integration
 
-  performancetest:
+  performance:
     docker:
       - image: simonmittag/wrk
     environment:
@@ -135,4 +135,8 @@ jobs:
           background: true
       - run: pwt localhost:8080
 
-      - run: wrk -t 8 -c 8 -d 1m http://localhost:8080/mse6/get
+      - run: cd performance && wrk -t 8 -c 8 -d 1m -s report.lua -- http://localhost:8080/mse6/get performance_results.json
+
+      - store_artifacts:
+          path: /performance
+          destination: performance_results.json
