--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ workflows:
       - integration
   performancetest:
     jobs:
-      - performance
+      - performancesimple
+      - performanceartifacts
 
 jobs:
   unit:
@@ -105,7 +106,39 @@ jobs:
       - run: pwt localhost:8080
       - run: go test -v github.com/simonmittag/jabba/integration
 
-  performance:
+  performancesimple:
+    docker:
+      - image: simonmittag/wrk
+    environment:
+      LOGLEVEL: WARN
+      LOGCOLOR: FALSE
+    steps:
+      - checkout # check out source code to working directory
+      - run: go get github.com/simonmittag/pwt
+      - run: go install github.com/simonmittag/pwt/cmd/pwt
+      - run: go get github.com/simonmittag/mse6
+      - run: go install github.com/simonmittag/mse6/cmd/mse6
+      - run:
+          name: Start upstream server one
+          command: mse6 -p 60083
+          background: true
+      - run: pwt localhost:60083
+      - run:
+          name: Start upstream server two
+          command: mse6 -p 60084
+          background: true
+      - run: pwt localhost:60084
+      - run: go build github.com/simonmittag/jabba
+      - run: go install github.com/simonmittag/jabba/cmd/jabba
+      - run:
+          name: start jabba
+          command: jabba
+          background: true
+      - run: pwt localhost:8080
+
+      - run: cd performance && wrk -t 8 -c 8 -d 10s -s report.lua -- http://localhost:8080/mse6/get performance_results.json
+
+  performanceartifacts:
     docker:
       - image: simonmittag/wrk
     environment:
