--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,7 @@ jobs:
           background: true
       - run: pwt localhost:8080
 
-      - run: cd performance && wrk -t 8 -c 8 -d 10s -s report.lua -- http://localhost:8080/mse6/get performance_results.json
+      - run: cd performance && wrk -t 8 -c 8 -d 10s -s test.lua -- http://localhost:8080/mse6/post performance_results.json
 
   performanceartifacts:
     docker:
@@ -168,7 +168,7 @@ jobs:
           background: true
       - run: pwt localhost:8080
 
-      - run: cd performance && wrk -t 8 -c 8 -d 1m -s report.lua -- http://localhost:8080/mse6/get performance_results.json
+      - run: cd performance && wrk -t 8 -c 8 -d 1m -s test.lua -- http://localhost:8080/mse6/post performance_results.json
 
       - store_artifacts:
           path: performance/performance_results.json
