--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,6 +144,7 @@ jobs:
     environment:
       LOGLEVEL: WARN
       LOGCOLOR: FALSE
+      PERFORMANCE_REQUEST_SECOND_THRESHOLD: 5000
     steps:
       - checkout # check out source code to working directory
       - run: go get github.com/simonmittag/pwt
@@ -177,4 +178,4 @@ jobs:
       - run: sudo apt-get install jq
       - run:
           name: check performance test results
-          command: test `cat performance/performance_results.json | jq .requestspersecond` -gt 5000.0 && echo "performance test passed, request/s > 5k" || echo "performance test failed, request/s < 5k";pkill jq
+          command: test `cat performance/performance_results.json | jq .requestspersecond` -gt $PERFORMANCE_REQUEST_SECOND_THRESHOLD && echo "performance test passed, request/s > 5k" || echo "performance test failed, request/s < 5k";pkill jq
