--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -191,4 +191,4 @@ jobs:
           command: |
           sudo apt-get install jq
           echo "min threshold for req/s $PERFORMANCE_REQUEST_SECOND_THRESHOLD"
-          test `cat performance/performance_results.json | jq .requestspersecond` -gt $PERFORMANCE_REQUEST_SECOND_THRESHOLD && echo "performance test passed, request/s > 5k";exit 0 || echo "performance test failed, request/s < 5k";pkill jq
+          test `cat performance/performance_results.json | jq .requestspersecond` -gt $PERFORMANCE_REQUEST_SECOND_THRESHOLD && (echo "performance test passed, request/s > 5k";exit 0) || (echo "performance test failed, request/s < 5k";pkill jq)
