--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,29 +114,43 @@ jobs:
       LOGCOLOR: FALSE
     steps:
       - checkout # check out source code to working directory
-      - run: go get github.com/simonmittag/pwt
-      - run: go install github.com/simonmittag/pwt/cmd/pwt
-      - run: go get github.com/simonmittag/mse6
-      - run: go install github.com/simonmittag/mse6/cmd/mse6
+      - run:
+          name: Install deps
+          command: |
+            sudo apt-get install jq
+            go get github.com/simonmittag/pwt
+            go install github.com/simonmittag/pwt/cmd/pwt
+            go get github.com/simonmittag/mse6
+            go install github.com/simonmittag/mse6/cmd/mse6
       - run:
           name: Start upstream server one
           command: mse6 -p 60083
           background: true
-      - run: pwt localhost:60083
+      - run:
+          name: Wait for upstream server one
+          command: pwt localhost:60083
       - run:
           name: Start upstream server two
           command: mse6 -p 60084
           background: true
-      - run: pwt localhost:60084
-      - run: go build github.com/simonmittag/jabba
-      - run: go install github.com/simonmittag/jabba/cmd/jabba
       - run:
-          name: start jabba
+          name: Wait for upstream server two
+          command: pwt localhost:60084
+      - run:
+          name: Install Jabba
+          command: |
+            go build github.com/simonmittag/jabba
+            go install github.com/simonmittag/jabba/cmd/jabba
+      - run:
+          name: Start jabba
           command: jabba
           background: true
-      - run: pwt localhost:8080
-
-      - run: cd performance && wrk -t 8 -c 8 -d 10s -s test.lua -- http://localhost:8080/mse6/post performance_results.json
+      - run:
+          name: Wait for Jabba to load
+          command: pwt localhost:8080
+      - run:
+          name: Execute performance tests with wrk
+          command: cd performance && wrk -t 8 -c 8 -d 10s -s test.lua -- http://localhost:8080/mse6/post performance_results.json
 
   performanceartifacts:
     docker:
@@ -148,7 +162,7 @@ jobs:
     steps:
       - checkout # check out source code to working directory
       - run:
-          name: install deps
+          name: Install deps
           command: |
             sudo apt-get install jq
             go get github.com/simonmittag/pwt
@@ -156,39 +170,39 @@ jobs:
             go get github.com/simonmittag/mse6
             go install github.com/simonmittag/mse6/cmd/mse6
       - run:
-          name: start upstream server one
+          name: Start upstream server one
           command: mse6 -p 60083
           background: true
       - run:
-          name: wait for upstream server one
+          name: Wait for upstream server one
           command: pwt localhost:60083
       - run:
-          name: start upstream server two
+          name: Start upstream server two
           command: mse6 -p 60084
           background: true
       - run:
-          name: wait for upstream server two
+          name: Wait for upstream server two
           command: pwt localhost:60084
       - run:
-          name: install Jabba
+          name: Install Jabba
           command: |
             go build github.com/simonmittag/jabba
             go install github.com/simonmittag/jabba/cmd/jabba
       - run:
-          name: start jabba
+          name: Start jabba
           command: jabba
           background: true
       - run:
-          name: wait for Jabba to load
+          name: Wait for Jabba to load
           command: pwt localhost:8080
       - run:
-          name: execute performance tests with wrk
+          name: Execute performance tests with wrk
           command: cd performance && wrk -t 8 -c 8 -d 1m -s test.lua -- http://localhost:8080/mse6/post performance_results.json
       - store_artifacts:
-          path: performance/performance_results.json
+          path: Performance/performance_results.json
           destination: performance_results.json
       - run:
-          name: check performance test results
+          name: Check performance test results
           command: |
             export reqss=`cat performance/performance_results.json | jq .requestspersecond`
-            test reqss -gt $PERFORMANCE_REQUEST_SECOND_THRESHOLD && (echo "performance test passed, ${reqss}/s > $PERFORMANCE_REQUEST_SECOND_THRESHOLD/s";exit 0) || (echo "performance test failed, ${reqss}/s < $PERFORMANCE_REQUEST_SECOND_THRESHOLD/s";pkill jq)
+            test ${reqss} -gt ${PERFORMANCE_REQUEST_SECOND_THRESHOLD} && (echo "performance test passed, ${reqss}/s > ${PERFORMANCE_REQUEST_SECOND_THRESHOLD}/s";exit 0) || (echo "performance test failed, ${reqss}/s < ${PERFORMANCE_REQUEST_SECOND_THRESHOLD}/s";pkill jq)
