--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,13 @@ jobs:
     environment:
       LOGLEVEL: WARN
       LOGCOLOR: FALSE
+      UPSTREAM_ONE_PORT: 60083
+      UPSTREAM_ONE_SLUG: /mse6
+      UPSTREAM_TWO_PORT: 60084
+      UPSTREAM_TWO_SLUG: /mse6
+      UPSTREAM_THREE_PORT: 60085
+      UPSTREAM_THREE_SLUG: /s1
+      JABBA_PORT: 8080
     steps:
       - checkout # check out source code to working directory
       - run: go get github.com/simonmittag/pwt
@@ -89,21 +96,26 @@ jobs:
       - run: go install github.com/simonmittag/mse6/cmd/mse6
       - run:
           name: Start upstream server one
-          command: mse6 -p 60083
+          command: mse6 -p ${UPSTREAM_ONE_PORT} -u ${UPSTREAM_ONE_SLUG}
           background: true
-      - run: pwt localhost:60083
+      - run: pwt localhost:${UPSTREAM_ONE_PORT}
       - run:
           name: Start upstream server two
-          command: mse6 -p 60084
+          command: mse6 -p ${UPSTREAM_TWO_PORT} -u ${UPSTREAM_TWO_SLUG}
           background: true
-      - run: pwt localhost:60084
+      - run: pwt localhost:${UPSTREAM_TWO_PORT}
+      - run:
+          name: Start upstream server three
+          command: mse6 -p ${UPSTREAM_THREE_PORT} -u ${UPSTREAM_THREE_SLUG}
+          background: true
+      - run: pwt localhost:${UPSTREAM_THREE_PORT}
       - run: go build github.com/simonmittag/jabba
       - run: go install github.com/simonmittag/jabba/cmd/jabba
       - run:
           name: start jabba
           command: jabba
           background: true
-      - run: pwt localhost:8080
+      - run: pwt localhost:${JABBA_PORT}
       - run: go test -v github.com/simonmittag/jabba/integration
 
   performance:
